refactor(create-role-usecase): refactor to use toList direct